cmake_minimum_required(VERSION 3.31)
project(Semaine_4)

set(CMAKE_CXX_STANDARD 20)

#add_executable(Semaine_4 main.cpp)

#add_executable(Semaine_4 Exercice1.cpp)

#add_executable(Semaine_4 Exercice2.cpp)

#add_executable(Semaine_4 Exercice3.cpp)

#add_executable (Semaine_4 Exercice4.cpp)

#add_executable (Semaine_4 Exercice5.cpp)

#add_executable (Semaine_4 Exercice6.cpp)

#add_executable (Semaine_4 Exercice7.cpp)

#add_executable (Semaine_4 Exercice8.cpp)

#add_executable (Semaine_4 Exercice9.cpp)

#add_executable (Semaine_4 Exercice10.cpp)

#add_executable (Semaine_4 Exercice11.cpp)

#add_executable (Semaine_4 Exercice11.cpp)


