cmake_minimum_required(VERSION 3.31)
project(untitled1 C)

set(CMAKE_C_STANDARD 11)

#add_executable(untitled1 Exercice5.c)

#add_executable(untitled1 Exercice6.c)


#add_executable(untitled1 testing.c)

#add_executable(untitled1 Exercice7.c)

#add_executable(untitled1 Exercice8.c)

#add_executable(untitled1 Exercice9.c)

#add_executable(untitled1  Exercice10.c)

add_executable(untitled1 Exercice1,2,3.c)