cmake_minimum_required(VERSION 3.31)
project(Semaine_6 C)

set(CMAKE_C_STANDARD 11)

#add_executable(Semaine_6 Exercice1.c)

#add_executable(Semaine_6 Exercice2.c)

#add_executable(Semaine_6 Exercice3.c)

#add_executable(Semaine_6 Exercice3.3.c)

#add_executable(Semaine_6 Exercice4.c)

#add_executable(Semaine_6 Exercice5.c)

#add_executable(Semaine_6 Exercice6.c)

#add_executable(Semaine_6 Exercice6.1.c)

#add_executable(Semaine_6  Exercice7.c)
add_executable(Semaine_6 Exercice8.c)
