cmake_minimum_required(VERSION 3.31)
project(untitled1 C)

set(CMAKE_C_STANDARD 11)

#add_executable(untitled1 Question1.c)

#add_executable(untitled1 Question2.c)

#add_executable(untitled1 Question3.c)

#add_executable(untitled1  Question4.c)

#add_executable(untitled1 Question5.c)

#add_executable(untitled1 Question6.c)

#add_executable(untitled1 Question7.c)

#add_executable(untitled1 Exercice1.c)

#add_executable(untitled1 Exercice2.c)

#add_executable(untitled1 Exercice3.c)

#add_executable(untitled1 Exercice4.c)

#add_executable(untitled1 Exercice5.c)

#add_executable(untitled1 Exercice6.c)

#add_executable(untitled1 Exercice7.c)

#add_executable(untitled1 Exercice8.c)

#add_executable(untitled1 Exercice9.c)

#add_executable(untitled1 Exercice10.c)

add_executable(untitled1 Exercice11.c)