cmake_minimum_required(VERSION 3.31)
project(untitled3 C)

set(CMAKE_C_STANDARD 11)

#add_executable(untitled3 main.c)

#add_executable(untitled3 Question1.c)

#add_executable(untitled3 Question2.c)

#add_executable(untitled3 Question3.c)

#add_executable(untitled3 Question4.c)

#add_executable(untitled3 Question5.c)

#add_executable(untitled3 Question6.c)

#add_executable(untitled3 Question7.c)

#add_executable(untitled3 Question8.c)

#add_executable(untitled3 Question9.c)

add_executable(untitled3 Question10.c)
